# aoc

./: Cargo.toml
challenges/: Cargo.toml
challenges/benches/: bench.rs
challenges/src/: common.rs  lib.rs  parser.rs
challenges/src/_2023/: d04.rs  d09.rs  d10.rs  d11.rs  mod.rs
challenges/src/_2023/d01/: mod.rs  parser.rs
challenges/src/_2023/d03/: mod.rs
challenges/src/_2023/d05/: mod.rs  parser.rs  range.rs  scratch.txt
challenges/src/_2023/d07/: hand.rs  mod.rs  part_1.rs  part_2.rs
challenges/src/_2023/d08/: mod.rs  parser.rs
input/2023/: 05_a copy.txt
run/: Cargo.toml
run/src/: main.rs
