[package]
name = "challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
itertools = "0.13.0"
nom = "7.1.3"
num = "0.4.1"
take-until = "0.2.0"

[[bench]]
name = "bench"
harness = false
